<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/github"
            android:contentDescription="@string/cnt_app_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:text="@string/github"/>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/in_between"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/in_between"
        android:contentDescription="@string/github_avatar"
        app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    <TextView
        android:id="@+id/tvPublicReposTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/in_between"
        android:text="@string/of_repos"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

    <TextView
        android:id="@+id/tvPublicRepos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/in_between"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPublicReposTitle"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

</androidx.constraintlayout.widget.ConstraintLayout>