<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="7.5dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="7.5dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="2.5dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/in_between"
        android:paddingBottom="@dimen/in_between"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/in_between"
        android:layout_marginBottom="@dimen/in_between"
        android:padding="@dimen/in_between"
        android:textColor="@android:color/white"
        android:textSize="@dimen/paragraph"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/in_between"
        android:layout_marginBottom="@dimen/in_between"
        android:padding="@dimen/in_between"
        android:text="@string/created_at_s"
        android:textColor="@android:color/white"
        android:textSize="@dimen/paragraph"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/in_between"
        android:layout_marginEnd="@dimen/in_between"
        android:padding="@dimen/in_between"
        android:text="@string/language_s"
        android:textColor="@android:color/white"
        android:textSize="@dimen/paragraph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreatedAt" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/in_between"
        android:layout_marginTop="@dimen/in_between"
        android:padding="@dimen/in_between"
        android:text="@string/size_s"
        android:textColor="@android:color/white"
        android:textSize="@dimen/paragraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLanguage"
        app:layout_constraintTop_toBottomOf="@id/tvCreatedAt" />
</androidx.constraintlayout.widget.ConstraintLayout>